themes/tundra/layout/TabContainer_rtl.css
.dijitRtl .tundra .dijitTab {
	margin-right:0;
	margin-left:5px;		/* space between one tab and the next in top/bottom mode */
}

.dijitRtl .tundra .dijitTab .dijitTabInnerDiv {
	border-left:none;
	border-right:1px solid #fff;
}

.dijitRtl .tundra .dijitTab .dijitClosable {
	padding: 6px 10px 4px 20px;
}

.dijitRtl .tundra .dijitTab .closeImage {
	position:static;
	padding: 0px 12px 0px 0px;
}

.dj_gecko .tundra .dijitTab .closeImage {
	position:relative;
	float:none;
	padding:0;
}

.dijitRtl .tundra .dijitTab .dijitClosable .closeImage {
	right:auto;
	left:3px;
}

.dijitRtl .tundra .dijitAlignLeft .dijitTab,
.dijitRtl .tundra .dijitAlignRight .dijitTab {
	margin-left:0px;
}

.dijitRtl .tundra .dijitAlignBottom .dijitTab .dijitClosable .closeImage {
	right:auto;
	left:3px;
}

.dijitRtl .tundra .dijitAlignRight .dijitTab .dijitTabInnerDiv {
	padding-left:10px;
	padding-right:20px;
}

.dijitRtl .tundra .dijitAlignLeft .dijitTab .dijitTabInnerDiv {
	padding-left:20px;
	padding-right:10px;
}

.dj_ie-rtl .tundra .dijitAlignLeft .dijitTab .dijitTabInnerDiv {
	padding-left:19px;
}

.dijitRtl .tundra .dijitAlignRight .dijitTab .dijitClosable .closeImage {
	left:auto;
	right:3px;
}

.dj_ie7-rtl .tundra .dijitAlignLeft .dijitTab  .dijitTabContent{
	position:relative;
}

.dj_ie7-rtl .tundra .dijitAlignLeft .dijitTab .dijitClosable .closeImage{
	position:absolute;
	top:2px;
	left:3px;
}

.dj_ie6-rtl .tundra .dijitAlignLeft .dijitTab .dijitClosable .closeImage{
	float:left;
}

.dj_ie6-rtl .tundra .dijitAlignLeft .dijitTab .dijitClosable .tabLabel{
	float:right;
}

.dj_ie .tundra .dijitTab .dijitTabInnerDiv{
	width : 1%;
}

